# mementar

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
docs/: ClientBase.html  CppAPI.html  Download.html  Event.html  EventsPublisher.html  EventsSubscriber.html  Fact.html  InstallMementar.html  ManagerClient.html  OccasionsPublisher.html  OccasionsSubscriber.html  SetUp.html  TimelineManipulator.html  TimelinesManipulator.html  construction.html  index.html
docs/cpp_API/: ClientBase.html  CppAPI.html  Fact.html  ManagerClient.html  OccasionsPublisher.html  OccasionsSubscriber.html  TimelineManipulator.html  TimelinesManipulator.html
docs/style/: index.css
files/: config_example.yaml
include/mementar/: Display.h  Fact.h  IdManager.h  RosInterface.h
include/mementar/API/: ActionsSubscriber.h  Event.h  EventsPublisher.h  EventsSubscriber.h  Fact.h  OccasionsPublisher.h  OccasionsSubscriber.h  TimelineManipulator.h  TimelinesManipulator.h
include/mementar/API/clients/: ClientBase.h  ManagerClient.h
include/mementar/API/mementar/: ActionsPublisher.h  ActionsSubscriber.h  OccasionsPublisher.h  OccasionsSubscriber.h  TimelineManipulator.h  TimelinesManipulator.h
include/mementar/Btree/: Btree.h  BtreeLeaf.h  BtreeLeafNode.h  BtreeNode.h
include/mementar/EpisodicTree/: ArchivedLeaf.h  ArchivedLeafNode.h  CompressedLeaf.h  CompressedLeafNode.h  CompressedLeafNodeSession.h  CompressedLeafSession.h  Context.h
include/mementar/archiving/: Archive.h  Header.h
include/mementar/archiving_compressing/archiving/: Archive.h  Header.h
include/mementar/archiving_compressing/binaryManagement/: BinaryManager.h  BitFileGenerator.h  BitFileGetter.h
include/mementar/binaryManagement/: BinaryManager.h  BitFileGenerator.h
include/mementar/compressing/: BitFileGetter.h  Compressor.h  Huffman.h  LzCompress.h  LzUncompress.h
include/mementar/core/: Fact.h  LinkedFact.h
include/mementar/graphical/: Display.h
include/mementar/lz/: BitFileGenerator.h  BitFileGetter.h  Huffman.h  LzCompress.h  LzUncompress.h
include/mementar/utils/: String.h
include/mementor/lz/: BitFileGenerator.h  LzCompress.h  LzUncompress.h
launch/: mementar.launch  mementar_full.launch  mementar_multi.launch  mementar_multi_full.launch  mementar_ontologenius.launch  mementar_ontologenius_multi.launch
msg/: MementarAction.msg  MementarEvent.msg  StampedFact.msg
resources/: darkstyle.qrc
resources/darkstyle/: darkstyle.qss
src/: RosInterface.cpp  compress.cpp  tmp.cpp  uncompress.cpp
src/API/: ActionsPublisher.cpp  ActionsSubscriber.cpp  EventsPublisher.cpp  EventsSubscriber.cpp  OccasionsPublisher.cpp  OccasionsSubscriber.cpp  TimelineManipulator.cpp  TimelinesManipulator.cpp
src/API/clients/: ClientBase.cpp  ManagerClient.cpp
src/API/mementar/: ActionsPublisher.cpp  ActionsSubscriber.cpp  OccasionsPublisher.cpp  OccasionsSubscriber.cpp  TimelineManipulator.cpp  TimelinesManipulator.cpp
src/Btree/: CMakeLists.txt
src/Btree/tests/: btree_test.cpp  episodic_tree.cpp  max_insertion.cpp
src/EpisodicTree/: ArchivedLeaf.cpp  ArchivedLeafNode.cpp  CMakeLists.txt  CompressedLeaf.cpp  CompressedLeafNode.cpp  CompressedLeafNodeSession.cpp  CompressedLeafSession.cpp  Context.cpp
src/EpisodicTree/tests/: archived_tree.cpp  episodic_tree.cpp
src/archiving/: Archive.cpp  Header.cpp
src/archiving_compressing/: CMakeLists.txt
src/archiving_compressing/archiving/: Archive.cpp  Header.cpp
src/archiving_compressing/binaryManagement/: BitFileGenerator.cpp  BitFileGetter.cpp
src/archiving_compressing/compressing/: Huffman.cpp  LzCompress.cpp  LzUncompress.cpp
src/archiving_compressing/tests/: archive.cpp  compress.cpp  uncompress.cpp
src/binaryManagement/: BitFileGenerator.cpp  BitFileGetter.cpp
src/compressing/: BitFileGenerator.cpp  BitFileGetter.cpp  Huffman.cpp  LzCompress.cpp  LzUncompress.cpp
src/core/Btree/: CMakeLists.txt
src/core/DoublyLinkedList/: DllCargoNode.cpp  DllLinkedElement.cpp
src/core/EpisodicTree/: ArchivedLeaf.cpp  ArchivedLeafNode.cpp  CMakeLists.txt  CompressedLeaf.cpp  CompressedLeafNode.cpp  CompressedLeafNodeSession.cpp  CompressedLeafSession.cpp  Context.cpp
src/core/Events/: EventsManager.cpp  Subscription.cpp
src/core/LtManagement/EpisodicTree/: ArchivedLeaf.cpp  ArchivedLeafNode.cpp  CMakeLists.txt  CompressedLeaf.cpp  CompressedLeafNode.cpp  CompressedLeafNodeSession.cpp  CompressedLeafSession.cpp  Context.cpp
src/core/LtManagement/EpisodicTree/tests/: archived_tree.cpp  episodic_tree.cpp
src/core/Occasions/: OccasionsManager.cpp  Subscription.cpp
src/core/Parametrization/: Configuration.cpp
src/core/archiving_compressing/: CMakeLists.txt
src/core/archiving_compressing/archiving/: Archive.cpp  Header.cpp
src/core/archiving_compressing/binaryManagement/: BitFileGenerator.cpp  BitFileGetter.cpp
src/core/archiving_compressing/compressing/: Huffman.cpp  Huffman_.cpp  Huffman_old.cpp  LzCompress.cpp  LzUncompress.cpp
src/core/archiving_compressing/tests/: archive.cpp  compress.cpp  uncompress.cpp
src/core/archiving_compressing/tests/perfs/: huffman_in.cpp  huffman_out.cpp  lz_in.cpp  lz_out.cpp
src/core/feeder/: FeedStorage.cpp  Feeder.cpp
src/core/memGraphs/Btree/: CMakeLists.txt
src/core/memGraphs/Btree/tests/: btree_test.cpp  cargo.cpp  max_insertion.cpp
src/graphical/mementarGUI/: DarkStyle.cpp  QCheckBoxExtended.cpp  QLineEditExtended.cpp  QPushButtonExtended.cpp  main.cpp  mementargui.cpp
src/graphical/timeline/: ActionReader.cpp  CsvSaver.cpp  EventReader.cpp  FactReader.cpp  TimelineDrawer.cpp  main.cpp
src/lz/: BitFileGenerator.cpp  BitFileGetter.cpp  Huffman.cpp  LzCompress.cpp  LzUncompress.cpp
src/nodes/: mementar.cpp  mementar_multi.cpp
src/test/: EventLink.cpp  config.cpp  event_sub_pub.cpp  graphs.cpp  occasions_sub_pub.cpp
src/test/CI/: action_pub_sub.cpp  fact_pub_sub.cpp
src/tests/: archive.cpp  compress.cpp  uncompress.cpp
srv/: MementarEventUnsubscription.srv  MementarService.srv
test/: action_pub_sub.test  fact_pub_sub.test
ui/: mementargui.ui
(+140 files in other folders)
