<?xml version="1.0"?>
<package>
  <name>mementar</name>
  <version>0.0.3</version>
  <description>The mementar package</description>

  <maintainer email="guillaume.sarthou@laas.fr">srth</maintainer>

  <license>GNU LGPLv3</license>

  <url type="website">https://sarthou.github.io/mementar/</url>

  <author email="guillaume.sarthou@laas.fr">srth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>ontologenius</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>ontologenius</run_depend>

  <!--export>
    <ontologenius plugin="${prefix}/reasoners_plugins.xml" />
  </export-->

</package>
